[tool.poetry]
name = "typing-assist"
version = "0.1.0"
description = ""
authors = ["x404xx <ghost.py@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyperclip = "^1.8.2"
httpx = "^0.27.0"
rich = "^13.7.1"
pynput = "^1.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
